# TikTik-WhatsApp-Generator

./: .gitignore  README.md  main.py  pyproject.toml  replit.md  requirements.txt
static/: script.js  style.css
templates/: admin.html  index.html  login.html
