[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "gspread-formatting>=1.2.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]
